--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "docker-compose up",
+    "start:dev": "docker-compose -f docker-compose.yml up -d",
     "start:debug": "nest start --debug --watch",
+    "start:test": "docker-compose -f docker-compose.test.yml up",
     "start:prod": "node dist/main",
     "stop:dev": "docker-compose down",
+    "stop:test": "docker-compose -f docker-compose.test.yml down",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch --maxWorkers=1",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "cross-env NODE_ENV=test JEST='true' jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch --maxWorkers=1",
+    "test:cov": "cross-env NODE_ENV=test jest --coverage",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "cross-env NODE_ENV=test JEST='true' jest --maxWorkers=1 --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
@@ -30,6 +33,7 @@
     "class-validator": "^0.13.1",
     "express-session": "^1.17.2",
     "pg": "^8.7.1",
+    "pg-promise": "^10.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -44,13 +48,17 @@
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
+    "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
+    "pgtools": "^0.3.2",
     "prettier": "2.4.1",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
